# rubik_solver

./: .gitignore  CMakeLists.txt  Mac_OS_install.sh  run.sh
algo/: Cargo.toml
algo/src/: lib.rs  main.rs
algo/src/algorithmes/: korf.rs  mod.rs  thistlethwaite.rs
algo/src/cube/: cube_3.rs  mod.rs  moves.rs  print_3.rs
config/: camera.cfg  rubik_shuffles.cfg
inc/: Animation.hpp  Camera.hpp  Constant.hpp  Core.hpp  ObjectLoader.hpp  Resolver.hpp  ShaderManager.hpp  Skybox.hpp  TextureManager.hpp
shaders/: axes.fragment.glsl  models.fragment.glsl  models.vertex.glsl  reflection.fragment.glsl  reflection.vertex.glsl
src/: Animation.cpp  Animation_RubikCubeMoves.cpp  Camera.cpp  Core.cpp  ObjectLoader.cpp  Resolver.cpp  ShaderManager.cpp  Skybox.cpp  TextureManager.cpp  main.cpp
